@@ -92,11 +92,22 @@ class Tx_Standorte_Controller_BackendController extends Tx_Extbase_MVC_Controlle
 	 * @param Tx_Standorte_Domain_Model_Bibliothek $bibliothek 
 	 */
 	public function deleteBibliothekAction(Tx_Standorte_Domain_Model_Bibliothek $bibliothek) {
-		
+
 		$this->flashMessageContainer->add('Die Bibliothek ' . $bibliothek->getTitel() . ' wurde erfolgreich geloescht.');
 		$this->bibliothekenRepository->remove($bibliothek);
 
 		$this->redirect('listBibliotheken');
+	}
+
+	/**
+	 * Loeschen einer Fakultaet
+	 * @param Tx_Standorte_Domain_Model_Fakultaet $fakultaet 
+	 */
+	public function deleteFakultaetAction(Tx_Standorte_Domain_Model_Fakultaet $fakultaet) {
+		$this->flashMessageContainer->add('Die Fakultaet ' . $fakultaet->getTitel() . ' wurde erfolgreich geloescht.');
+		$this->fakultaetRepository->remove($fakultaet);
+
+		$this->redirect('listFakultaeten');
 	}
 
 }
