@@ -2,23 +2,26 @@
 
 <f:section name="backend">
 
-	<f:be.buttons.icon uri="alt_doc.php?returnUrl=mod.php%3F%26M%3Dweb_list%26id%3D{f:cObject(typoscriptObjectPath:'lib.tx_standorte.storagePid')}&edit[tx_standorte_domain_model_fakultaet][{f:cObject(typoscriptObjectPath:'lib.tx_standorte.storagePid')}]=new" icon="new_el" title="Neue Fakultaet anlegen" />
+	<f:be.buttons.icon uri="alt_doc.php?returnUrl=mod.php%3F%26M%3Dweb_StandorteTxStandorteM1%26id%3D{f:cObject(typoscriptObjectPath:'lib.tx_standorte.storagePid')}&edit[tx_standorte_domain_model_fakultaet][{f:cObject(typoscriptObjectPath:'lib.tx_standorte.storagePid')}]=new" icon="new_el" title="Neue Fakultaet anlegen" />
 	Neue Fakultät
 	<table id="daten">
 		<thead>
 			<tr>
-				<th></th>
+				<th class="icons"></th>
 				<th class="header">Fakultät</th>
 			</tr>
 		</thead>
 		<tbody>
 		<f:for each="{fakultaeten}" as="fakultaet">
-			<tr>
-				<td>
-			<f:be.buttons.icon uri="alt_doc.php?returnUrl=mod.php%3F%26M%3Dweb_StandorteTxStandorteM1%26id%3D{f:cObject(typoscriptObjectPath:'lib.tx_standorte.storagePid')}&edit[tx_standorte_domain_model_fakultaet][{fakultaet.uid}]=edit&tx_standorte_web_standortetxstandortem1[action]=listFakultaeten&tx_standorte_web_standortetxstandortem1[controller]=Backend" icon="edit2" title="{fakultaet.titel} bearbeiten" />
-			<f:be.buttons.icon uri="{f:uri.action(action:'deleteFakultaet')}" icon="deletedok" title="{fakultaet.titel} löschen" />
-			</td>
-			<td><strong>{fakultaet.titel}</strong> <br />
+			<tr class="icons">
+				<td><div class="edit">
+						<f:be.buttons.icon uri="alt_doc.php?returnUrl=mod.php%3F%26M%3Dweb_StandorteTxStandorteM1%26id%3D{f:cObject(typoscriptObjectPath:'lib.tx_standorte.storagePid')}&edit[tx_standorte_domain_model_fakultaet][{fakultaet.uid}]=edit&tx_standorte_web_standortetxstandortem1[action]=listFakultaeten&tx_standorte_web_standortetxstandortem1[controller]=Backend" icon="edit2" title="{fakultaet.titel} bearbeiten" />
+					</div>
+					<div class="delete">
+						<f:be.buttons.icon uri="{f:uri.action(action:'deleteFakultaet',arguments:'{fakultaet:fakultaet}')}" icon="deletedok" title="{fakultaet.titel} löschen" />
+					</div>
+				</td>
+				<td><strong>{fakultaet.titel}</strong> <br />
 			<f:link.action action="listBibliothekenByFakultaet" controller="Backend" arguments="{fakultaetUid:fakultaet.uid}">&raquo; Alle {fakultaet.anzahlBibliotheken} zugeh&ouml;rigen Bibliotheken</f:link.action>
 			</td>
 			</tr>
