@@ -1,4 +1,5 @@
 <?php
+
 // $Id$
 
 
@@ -77,7 +78,7 @@ if (TYPO3_MODE === 'BE') {
 					'tx_standorte_m1',
 					'',
 					array(
-						'Backend' => 'index,newBibo,createBibo,deleteBibliothek,newFakultaet,createFakultaet,listFakultaeten,listBibliotheken,listBibliothekenByFakultaet',
+						'Backend' => 'index,newBibo,createBibo,deleteBibliothek,newFakultaet,createFakultaet,deleteFakultaet,listFakultaeten,listBibliotheken,listBibliothekenByFakultaet',
 					),
 					array(
 						'access' => 'user,group',
