@@ -1,3 +1,6 @@
+2011-02-11 Ingo Pfennigstorf <pfennigstorf@sub.uni-goettingen.de>
+	* Fakultaeten und Bibliotheken werden mit Nachfrage geloescht
+
 2011-02-10 Ingo Pfennigstorf <pfennigstorf@sub.uni-goettingen.de>
 	* Pi2 erstellt und konfiguriert (Bibliotheken und Sigelauflistung) WWW-525
 	* Singleansicht in Pi2 integriert (Klick auf Bibliothek) WWW-531
